test/semantic-errors/8.pas
program p;
function f():real;
begin return ""end;
begin writeln(1)end.
